[package]
name = "vivinq"
author = "Sébastien LUNDI"
description = "A rust library to query the Vivino service"
version = "1.1.1"
edition = "2021"
readme = "README.md"
repository = "https://github.com/slundi/vivinq"
license = "MIT/Apache-2.0"
keywords = ["api", "wine", "vivino"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["serde_json"]
serde_json = ["dep:syn", "dep:serde", "dep:serde_json", "dep:chrono"]

[dependencies]
syn = { version = "1.0.95", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
chrono = { version = "0.4", features = ["serde"],  optional = true }

[dev-dependencies]
ureq = { version = "2", features = ["charset"] }
